# aviabot

./: Cargo.toml  README.md  config.toml
src/: config.rs  db.rs  main.rs  position.rs  rabbitmq.rs  seq_logger.rs  test_load.rs  ts3_client.rs  ts3_client_list.rs
src/audio/: decoder.rs  effects.rs  encoder.rs  mixer.rs  mod.rs
